[package]
name = "relobo-wh"
version = "0.0.1"
edition = "2021"

[dependencies]
log = "0.4.22"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = {version = "*", features = ["full"]}
casopis = { git = "https://github.com/VloBoo/casopis.git", version = "*" }
config = "0.14.0"
webhook = "2.1.2"
scraper = "0.19.1"
chrono = "0.4.38"
