[package]
name = "relobo-wh"
version = "0.0.2"
edition = "2021"

[dependencies]
log = "0.4"
reqwest = { version = "0.12", features = ["blocking"] }
tokio = {version = "*", features = ["full"]}
casopis = { git = "https://github.com/VloBoo/casopis.git", version = "*" }
config = "0.14"
webhook = "2.1"
scraper = "0.20"
chrono = "0.4"
html2md = "0.2"
serde_json = "1.0"
url = "2.5.2"
regex = "1.11"
